test/resources/language/processing/syntax_error/syntax_error.pde
void setup(){
  size(100, 100);
  background(100)
}

void draw(){

}
